--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ python-dotenv = "^1.0.1"
 coverage = "^7.6.4"
 tqdm = "^4.66.5"
 pydantic = "^2.10.3"
+opentelemetry-api = "^1.29.0"
+opentelemetry-sdk = "^1.29.0"
+opentelemetry-exporter-otlp = "^1.29.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
