--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pydantic = "^2.10.3"
 opentelemetry-api = "^1.29.0"
 opentelemetry-sdk = "^1.29.0"
 opentelemetry-exporter-otlp = "^1.29.0"
+opentelemetry-instrumentation-requests = "^0.50b0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
