--- a/.github/workflows/job-deploy.yaml
+++ b/.github/workflows/job-deploy.yaml
@@ -1,10 +1,18 @@
 name: Build and Deploy to Cloud Run Job
 
 
+
 on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'README.md'
+      - '*.md'
+      - '*.txt'
+      - 'LICENSE'
+      - .gitattributes
+      - .gitignore
   workflow_dispatch:
 
 env:
